align all elements, correct measures, change fonts

--- a/style.css
+++ b/style.css
@@ -7,9 +7,15 @@ body{
     background-color: #1f2937;
     color: #F9FAF8;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+}
+.header1{
+    width: 880px;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 16px 120px;
     font-size: 24px;
 }
 
@@ -23,36 +29,49 @@ ul{
 
 a{
     text-decoration: none;
-    color: #F9FAF8;
+    color: #e5e7eb;
+    font-size: 18px;
+    
     
 }
 
 .logo{
     font-weight: 700;
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
 .hero{
     display: flex;
     justify-content: center;
-
     align-items: center;
-    padding: 100px 0px;
-
-
     background-color: #1f2937;
     color: #F9FAF8;
+    padding: 100px;
 }
+.hero1{
+    width: 880px;
+    height: 230px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 28px;
+   
+
+}
+
+
 img{
-    width: 441px;
+    width: 440px;
     height: 230px;
     margin: 0;
-    padding-left: 40px;
+    
 
 }
 
 .text{
     height: 230px;
-    width: 441px;
+    width: 440px;
     margin: 0;
     padding: 0;
 }
@@ -60,10 +79,13 @@ img{
     margin: 0;
     padding: 0;
     font-size: 48px;
-    font-weight: bolder;
+    font-weight: 900;
 }
 p{
     font-size: 18px;
+    margin: 13px 0px 15px 0px;
+    padding: 0;
+    color: #e5e7eb;
 
 }
 
@@ -72,12 +94,15 @@ p{
     padding: 6px 20px;
     color: #F9FAF8;
     font-weight: 700;
-    border-radius: 10px;
+    border-radius: 5px;
+    border: 0px;
 }
 .container{
     text-align: center;
-    padding: 52px;
+    height: 330px;
+    padding: 50px;
 }
+
 .picinfo{
     display: flex;
     justify-content: center;
@@ -85,21 +110,22 @@ p{
 
 }
 .img{
-    width: 100px;
-    height: 100px;
+    width: 130px;
+    height: 130px;
     margin: 0;
     padding: 0;
     border: 3px solid #3882f6;
     border-radius: 10px;
 }
 .info .pictext{
-  max-width: 100px;
+  max-width: 130px;
 }
 
 .title{
     font-size: 36px;
     font-weight: 900;
     margin-bottom: 52px;
+    color: #1f2937;
 }
 .pictext{
     text-align: center;
@@ -113,7 +139,7 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 400px;
+    padding: 100px 400px;
 }
 .motivation{
     
@@ -122,10 +148,12 @@ p{
     font-size: 36px;
     font-style: italic;
     text-align: justify;
+    font-weight: 100;
 }
 .inquote{
     display: flex;
     flex-direction: column;
+    width: 750px;
 }
 .signature{
     align-self: flex-end;
@@ -134,24 +162,27 @@ p{
 }
 .container2{
     height: 300px;
+    padding: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .blue{
     display: flex;
+    align-items: center;
     gap: 52px;
     background-color: #3882f6;
-    padding: 50px 140px;
+    padding: 50px 100px;
     border-radius: 10px;
+    width: 680px;
 }
 .bold{
-    font-size: 25px;
+    font-size: 22px;
     font-weight: 700;
     color:#F9FAF8;
 }
 .casual{
-    font-size: 20px;
+    font-size: 18px;
     color: #F9FAF8;
 }
 .upsign{
@@ -159,8 +190,10 @@ p{
     padding: 0px 32px;
     color: #F9FAF8;
     font-weight: 700;
-    border-radius: 10px;
+    border-radius: 8px;
     border-color: #F9FAF8;
+    border: 2px solid white;
+    height: 40px;
 }
 
 .footer{
